@@ -3,6 +3,7 @@ Revision history for SPVM
         [CHANGE]
         * Add no_symbol_cache_flag, set_no_symbol_cache_flag, get_no_symbol_cache_flag native APIs
         * Precompile and native method of SPVM core become reentrant if no_symbol_cache_flag is set.
+        * Fix precompile exception bugs when symbols is not found.
 
 0.9505  2021-02-16
         [CHANGE]
